# QSPy

./: .gitignore  .pylintrc  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: gitleaks.yml  publish.yml  pylint.yml  python-package.yml  super-linter.yml
docs/: conf.py  requirements.txt
docs/source/: conf.py  examples.rst  index.rst  qspylib.rst
src/qspy/: __init__.py  clublog.py  eqsl.py  lotw.py  qrz.py  test_pytest.py
src/qspylib/: __init__.py  _version.py  clublog.py  eqsl.py  logbook.py  lotw.py  qrz.py  test.py  test_pytest.py
