[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qspy"
version = "0.0.1"
authors = [
  { name="Jacob Humble", email="contact@jacobhumble.com" },
]
description = "Amateur radio website API wrappers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JayToTheAy/QSPy"
Issues = "https://github.com/JayToTheAy/QSPy/issues"